--- a/assets/style.css
+++ b/assets/style.css
@@ -14,14 +14,10 @@
 }
 
 .desc-txt {
-    margin-left: 44em;
-    margin-right: 0px;
+    margin: 0 auto 0 auto;
+    text-align: center;
     color: orange;
     font-family: var(--main-font);
-}
-
-.title-edit {
-    margin-left: 1.5em
 }
 
 header nav {
@@ -36,20 +32,20 @@ header nav ul {
 
 header nav li {
     display: inline-block;
-    margin-left: 70px;
     color: brown;
+    margin: 0 20px 0 0px;
 }
 
 ul li a {
     color: black;
     font-family: var(--main-font);
+    margin-left: 10px;
+    margin-right: 15px;
 }
 
 ul li a:hover {
     color: antiquewhite;
 }
-
-/* background image of nyc skyline */
 
 .bgimage {
     background-image: url("../images/nyskylinenight.jpg");
@@ -119,6 +115,10 @@ div h4 {
 .card-img-top {
     width: 100%;
     height: 78%;
+}
+
+.card {
+    border: 1px groove whitesmoke;
 }
 
 .card-body {
