media query for 414px finished

--- a/assets/style.css
+++ b/assets/style.css
@@ -140,7 +140,36 @@ div h4 {
     margin: 4em auto 0 auto;
 }
 
-body > footer > div > section > div > div.col-lg-2.col-md-12.mb-4.mb-md-0.git-card > div > a > img {
+/* body > footer > div > section > div > div.col-lg-2.col-md-12.mb-4.mb-md-0.git-card > div > a > img {
     height: 9em;
     border-radius: 30px;
+} */
+
+.foot-size {
+    height: 9em;
+    border-radius: 30px;
+}
+
+@media only screen and (max-width: 414px) {
+    .profilepic {
+        margin-left: 0em;
+        width: 100%;
+    }
+    .about-me-paragraph {
+        margin-right: 7.1em;
+        border: 2px;
+        display: contents;
+    }
+    .p-txt {
+        margin: 20px 10px 0rem 10px;
+    }
+    .work-title {
+        padding-top: 3em;
+    }
+    .foot-size {
+        height: 50%
+    }
+    .w-100 {
+        width: 50%!important;
+    }
 }
